--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@
 
     border-bottom: 1px solid #7FC2DB;
     clear: both;
-    color: #0B0D14;
+    color: #555;
     height: 110px;
     text-align: left;
     width: 100%;
@@ -82,7 +82,7 @@
   float: left;
   position:relative;
   left:7.5%;
-  top:10px;
+  top:12px;
   z-index: 99;
 }
 
