--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= semantic_form_for ([commentable, Comment.new]) do |f| %>
+<%= semantic_form_for ([commentable, Comment.new]), :remote => true do |f| %>
   <p class="font-small">
     <%= t("comments.leaveAComment") %>
   </p>
