--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,4 +1,4 @@
-<% if location.country || location.city %>
+<% if logged_in? and location and (location.country || location.city) %>
   <span class="font-smaller">
     <%= location.city if location.city %> 
     <% if not location.country.blank? %> <%=h t( location.country, :scope => "countries" ) %><% end %> 
