--- a/app/views/pings/index.html.erb
+++ b/app/views/pings/index.html.erb
@@ -6,7 +6,7 @@
   </script>
 <% end %>
 <% if @user %>  
-  <h2><%= t("title.pings.ofUser") %> (<%= @pings_count %>) (<%= @inverse_pings.size %>)</h2>
+  <h2><%= t("title.pings.ofUser") %> (<%= @pings_count %>)</h2>
 <% elsif @item %>
   <h3><%= t("title.pings.of") %> <%=h @item.title %></h3>
 <% end %>
