--- a/app/views/pings/_userform.html.erb
+++ b/app/views/pings/_userform.html.erb
@@ -1,6 +1,7 @@
+Params: <%=  params %>
 <%= form_for Ping.new do |f| %>
   <%= f.error_messages %>
-  <%= f.hidden_field :pingable_id, :value => params[:user_id] %>
+  <%= f.hidden_field :pingable_id, :value => params[:follow] %>
   <%= f.hidden_field :pingable_type, :value => "User" %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
 
