Users can follow other users by pinging them

--- a/app/views/ping_mailer/de_ping_updated.html.erb
+++ b/app/views/ping_mailer/de_ping_updated.html.erb
@@ -4,7 +4,9 @@ Hallo <%= @user.login %>,
 <br />
 <br />
 Besuche das Profil von <a href="<%= @user_url %>" ><%= @holder.login %></a>.<br />
+<% if @resource.class.to_s == "Item" %>
 Ressource: <a href="<%= @resource_url %>" ><%= @resource.title %></a> von <%= @holder.login %>.
+<% end %>
 <br />
 <br />
 Dein
