--- a/app/views/pings/show.html.erb
+++ b/app/views/pings/show.html.erb
@@ -20,8 +20,10 @@
     <p class="font-smaller"><%= t("accepted_at") %> <%=h @ping.accepted_at %></p>
   <% end %>
   <hr class="divider" />
-  <%= link_to @ping.pingedOn?.html_safe, @ping.item %><br/>
-  <p class="font-smaller"><%= t("#{@ping.item.itemtype}.singular").html_safe %> <%= t("by") %> <%= render :partial => "share/usertiny", :locals => { :user => @ping.item.owner } %>
+  <% if @ping.item %>
+    <%= link_to @ping.pingedOn?.html_safe, @ping.item %><br/>
+    <p class="font-smaller"><%= t("#{@ping.item.itemtype}.singular").html_safe %> <%= t("by") %> <%= render :partial => "share/usertiny", :locals => { :user => @ping.item.owner } %>
+  <% end %>
   </p>
   <%= render :partial => "pings/pingmenu", :locals => { :ping => @ping} %>
 </div>
