--- a/app/views/pings/new.js.erb
+++ b/app/views/pings/new.js.erb
@@ -1,1 +1,1 @@
-$("#ping_form").html("<%= escape_javascript(render(:template => "pings/_userform"))%>");
+$.colorbox({html:"<%= escape_javascript(render(:template => "pings/_userform"))%>"});
