--- a/app/views/share/userarea/_profileusermenu.rhtml
+++ b/app/views/share/userarea/_profileusermenu.rhtml
@@ -1,7 +1,6 @@
 <% if user_signed_in? and user.login != current_user.login %>
   <ul class="font-smaller button">
-    <li><%= link_to t("menu.user.addToFriends"), friendships_path(:friend_id => user), :method => :post if !is_friend?(user) %></li>
     <li><%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user.id) %></li>
-    <li><%= link_to "Follow", new_ping_path(:follow => user.id), :remote => true, :id => "followlink" %></li>
+    <li><%= link_to "Follow", new_ping_path(:follow => user.id), :remote => true, :id => "followlink" if not current_user.following?(user) %></li>
   </ul>
 <% end %>
