--- a/app/views/share/_itemtiny.html.erb
+++ b/app/views/share/_itemtiny.html.erb
@@ -1,5 +1,7 @@
 <div class="tiny-user-thumb bordered font-smaller center ui-corner-all">
-  <%= link_to_unless_current image_tag(tinyThumb(item), :alt => item.title, :title => item.title), item %>
+  <% if item.images && item.images.first %>
+  <%= link_to image_tag(tinyThumb(item), :alt => item.title, :title => item.title), item %>
   <br />
-  <%= link_to item.title, item %>
+  <% end %>
+  <%= link_to shorten(item.title, 10), item %>
 </div>
