--- a/app/views/items/_itemtype.html.erb
+++ b/app/views/items/_itemtype.html.erb
@@ -1,6 +1,13 @@
-<span class="image">
-  <%= image_tag "/images/icons/icon_#{@item.itemtype}.png" %>
-</span>
-<span>
-  <%= item.localized_itemtype.html_safe %>
-</span>
+<div class="itemtype">
+  <span class="image">
+    <%= image_tag "/images/icons/icon_#{@item.itemtype}.png" %>
+  </span>
+  <span>
+    <%= item.localized_itemtype.html_safe %>
+  </span>
+  <% if @item.multiple? %>
+    <span>
+      <%= image_tag('/images/icons/icon_item_multiple.png', :alt => t("resources.multiple").html_safe, :title => t("resources.multiple").html_safe) %>
+    </span>
+  <% end %>
+</div>
