--- a/app/views/share/_itemtiny.html.erb
+++ b/app/views/share/_itemtiny.html.erb
@@ -3,5 +3,5 @@
   <%= link_to image_tag(tinyThumb(item), :alt => item.title, :title => item.title), item %>
   <br />
   <% end %>
-  <%= link_to shorten(item.title, 10), item %>
+  <%= link_to shorten(item.title, 10), item, :title => item.title %>
 </div>
