--- a/app/views/groups/_groupmenu.html.erb
+++ b/app/views/groups/_groupmenu.html.erb
@@ -1,6 +1,11 @@
-<ul>
-  <% if group.owner? and group.owner == current_user %>
-    <li class="button"><%= link_to 'Edit', edit_polymorphic_path([@user, group]) %></li>
-    <li class="button"><%= link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete  %></li>
-  <% end %>
-</ul>
+<% if logged_in? %>
+  <ul class="font-smaller horizontal">
+    <% if current_user == group.owner %>
+      <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, group]) %></li>
+      <li class="button"><%= link_to t("delete").html_safe, group, :confirm => t("confirm_delete").html_safe, :method => :delete  %></li>
+    <% else %>
+      <li class="button"><%= link_to t("follow"), follow_group_path, :method => :put if not current_user.following?(group) %></li>
+    <% end %>
+  </ul>
+<div class="clear" ></div>
+<% end %>
