--- a/app/views/items/_itemmenu.html.erb
+++ b/app/views/items/_itemmenu.html.erb
@@ -1,3 +1,14 @@
-<ul class="font-smaller button">
-  <li><%= link_to t("follow"), follow_item_path, :method => :put if not current_user.following?(item) %></li>
-</ul>
+<% if logged_in? %>
+  <ul class="font-smaller horizontal">
+  <% if current_user == item.owner %>
+    <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, item]) %></li>
+    <li class="button"><%= link_to t("delete").html_safe, {:action => "destroy", :id => item},
+          :confirm => t("confirm_delete").html_safe,
+          :method => :delete %>
+    </li>
+  <% else %>
+    <li class="button"><%= link_to t("follow"), follow_item_path, :method => :put if not current_user.following?(item) %></li>
+  <% end %>
+  </ul>
+<div class="clear" ></div>
+<% end %>
