--- a/app/views/share/_topnavigation.html.erb
+++ b/app/views/share/_topnavigation.html.erb
@@ -1,10 +1,10 @@
   <div id="topnavigation">
     <% if logged_in? and current_user %>
       <div id="profile_dropdown">
-        <%= link_to (image_tag(microThumb(current_user)) + '&nbsp;'.html_safe + current_user.login), profile_path(current_user.login), :id => "profile_link" %>
+        <%= link_to (image_tag(microThumb(current_user)) + '&nbsp;'.html_safe + current_user.login), current_user, :id => "profile_link" %>
       </div> 
       <ul class="profile menu">
-        <li><%= link_to t("topnavigation.profile"), profile_path(current_user.login)%></li>
+        <li><%= link_to t("topnavigation.profile"), current_user %></li>
         <li><%= link_to t("topnavigation.resources"), polymorphic_path([current_user, "items"]) %></li>
         <li><%= nav_link t('topnavigation.mailbox'), "/mailbox" %></li>
         <li><%= link_to t("topnavigation.logout"), "/logout" %></li>
