--- a/app/views/share/_usermicro_flat.html.erb
+++ b/app/views/share/_usermicro_flat.html.erb
@@ -1,1 +1,1 @@
-<%= link_to (image_tag(microThumb(user)) + "&nbsp;".html_safe + user.login), user %>
+<%= link_to (image_tag(microThumb(user)) + "&nbsp;".html_safe + user.login), user, :alt => user.login, :title => user.login %>
